# remapper

./: .gitignore  Cargo.toml  dumb  perf.data  perf.data.old
src/: diffusion.rs  dumb.rs  kd.rs  lib.rs  main.rs  ordered.rs
src/diffusion/: riemerasma.rs  sierra.rs
tests/: test.rs
tests/tres/: .testing
