[package]
name = "remapper"
version = "0.1.0"
edition = "2021"

[dependencies]
atools = "0.1.5"
car = "0.1.1"
exoquant = "0.2.0"
fimg = { version = "0.4.43", git = "https://github.com/bend-n/fimg", default-features = false, features = [
    "save",
    "scale",
] }
fux_kdtree = "0.2.0"
rand = "0.8.5"


[profile.release]
debug = true
lto = "thin"
codegen-units = 1
