[package]
name = "remapper"
version = "0.1.0"
edition = "2024"

[dependencies]
atools = "0.1.5"
car = "0.1.1"
exoquant = "0.2.0"
fimg = { version = "0.4.52", default-features = false, features = [
    "save",
    "scale",
] }
hinted = "0.0.2"
lower = "0.2"
mattr = "1"
rand = "0.8.5"


[profile.release]
debug = true
lto = "thin"
codegen-units = 1
